crates/test-files/fixtures/compile_errors/traits_as_fields.fe
trait Foo {}

struct Bar {
    val: Foo
}

contract Nope {
    val: Foo
}